--- a/EmpInfo/Views/Apply/BeginApplySP.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplySP.cshtml
@@ -840,8 +840,8 @@
             <p>
                 1. 流程步骤如下：<br/>
                 [1]. 收寄文件：流程开始--->员工提交申请--->部门负责人审批--->流程结束。<br/>
-                [2]. 收寄产品：流程开始--->员工提交申请--->部门负责人审批--->QA审批（如果不是退补货，则跳过此步骤）---> 行政部审批（如不是寄件，则跳过此步骤）---> 物流部审批（如总毛重小于10KG，则跳过此步骤）--->流程结束。<br/>
-                [3]. 收寄原材料：流程开始--->员工提交申请--->品质部审批--->部门负责人审批--->仓管部审批---> 行政部审批（如不是寄件，则跳过此步骤）---> 物流部审批（如总毛重小于10KG，则跳过此步骤）--->流程结束。
+                [2]. 收寄产品：流程开始--->员工提交申请--->部门负责人审批--->QA审批（如果不是退补货，则跳过此步骤）---> @*行政部审批（如不是寄件，则跳过此步骤）---> 物流部审批（如总毛重小于10KG，则跳过此步骤）*@--->流程结束。<br/>
+                [3]. 收寄原材料：流程开始--->员工提交申请--->品质部审批--->部门负责人审批--->仓管部审批---> @*行政部审批（如不是寄件，则跳过此步骤）---> 物流部审批（如总毛重小于10KG，则跳过此步骤）*@--->流程结束。
             </p>
             <p>
                 2. 10KG以内的省内件，默认使用顺丰标快；10KG以内的省外件或港澳台件，时效是次日达的，默认使用顺丰标快；
