--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -117,6 +117,14 @@
                     <p class="text-center">项目申请单</p>
                 </a>
             </div>
+            
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=XB")">
+                    <img src="@Url.Content("~/Content/images/xb.png")" alt="设备申请单" class="center-block" />
+                    <p class="text-center">设备类申请</p>
+                </a>
+            </div>
+
             <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 物流出货 & K3相关</div>
 
             <div class="col-xs-4 col-sm-3 col-md-2">
